--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 200px;
-  padding: 16px;
+  padding: 14px;
   background-color: #fff;
   border: 1px solid #f3f3f3;
   border-radius: 5px;
@@ -10,12 +10,16 @@
   color: #060b35;
 
   &__picture {
-    width: 160px;
-    height: 134px;
-    margin: 16px 3px 40px;
-    transition-duration: 400ms;
+    align-self: center;
+    width: 168px;
+    height: 150px;
+    padding: 16px 4px 0;
+    margin-bottom: 40px;
+    transition: transform 400ms;
+    
     &:hover {
       border: 3px solid #f3f3f3;
+
       transform: scale(1.2);
     }
   }
