--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -15,11 +15,11 @@
     height: 150px;
     padding: 16px 4px 0;
     margin-bottom: 40px;
+    border: 3px solid #fff;
     transition: transform 400ms;
-    
+
     &:hover {
       border: 3px solid #f3f3f3;
-
       transform: scale(1.2);
     }
   }
