--- a/src/styles/blocks/catalog.scss
+++ b/src/styles/blocks/catalog.scss
@@ -1,12 +1,9 @@
 .catalog {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 50px;
+
   max-width: 944px;
   padding-top: 50px;
 
-  &__item {
-    padding-bottom: 50px;
-  }
 }
