--- a/src/styles/blocks/main-content.scss
+++ b/src/styles/blocks/main-content.scss
@@ -1,5 +1,5 @@
 .main-content {
-  display: flex;
+  display: grid;
   justify-content: center;
-  align-items: center;
+  align-content: center;
 }
